--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -27,6 +27,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0",
     "run": "^1.4.0",
